--- a/src/pages/inspection-list/inspection-list.html
+++ b/src/pages/inspection-list/inspection-list.html
@@ -13,14 +13,15 @@
   <ion-searchbar
     [(ngModel)]="searchTerm"
     (ionInput)="filterList($event)"
-    placeholder="Niveau de risque, # civique ou nom de rue"
-  >
+    placeholder="Niveau de risque, # civique ou nom de rue">
 
   </ion-searchbar>
 </ion-header>
 
-
 <ion-content>
+  <ion-refresher (ionRefresh)="refreshList($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <ion-list>
       <ion-item-group *ngFor="let batch of filteredBatches">
         <ion-item-divider>Lot d'inspection : {{batch.description}}</ion-item-divider>
