Feat(#39) Menu theming.

--- a/src/pages/intervention-home/intervention-home.html
+++ b/src/pages/intervention-home/intervention-home.html
@@ -1,36 +1,58 @@
 <ion-menu [content]="mycontent" [persistent]="true" id="inspectionMenu">
   <ion-header>
-    <ion-toolbar>
-      <ion-title>Plan d'intervention</ion-title>
+    <ion-toolbar class="user-profile">
+      <ion-grid>
+        <ion-row>
+
+          <ion-col col-3>
+            <div class="user-avatar">
+              <img src="../assets/img/logocauca-vertical.png">
+            </div>
+          </ion-col>
+
+          <ion-col col-6>
+            <span ion-text class="text-white"><strong>SURVI</strong> prévention</span>
+            <h3 ion-text class="no-margin bold text-white">{{fullName}}</h3>
+          </ion-col>
+
+        </ion-row>
+
+        <ion-row no-padding class="other-data">
+          <ion-col no-padding class="column">
+            <button ion-button icon-left small full color="light" menuClose disabled>
+              <ion-icon name="contact"></ion-icon>
+              Configuration
+            </button>
+          </ion-col>
+          <ion-col no-padding class="column">
+            <button ion-button icon-left small full color="light" menuClose (click)="logout()">
+              <ion-icon name="log-out"></ion-icon>
+              Fermer la session
+            </button>
+          </ion-col>
+        </ion-row>
+
+      </ion-grid>
     </ion-toolbar>
   </ion-header>
-  <ion-content>
-    <ion-list>
-      <button ion-item menuClose (click)="openPage(generalPage)">
-        Infos générales
+
+  <ion-content color="caucaRed">
+    <ion-list class="menu-items">
+      <button ion-item menuClose class="text-menu" *ngFor="let menuItem of menuItems" (click)="openPage(menuItem.page)">
+        <ion-icon item-left [name]="menuItem.icon"></ion-icon>
+        <span ion-text>{{menuItem.title}}</span>
       </button>
-      <button ion-item icon-start menuClose (click)="openPage(buildingsPage)">
-        <ion-icon name="home"></ion-icon>
-        Bâtiments
+
+      <button ion-item menuClose class="text-menu" (click)="goToInspectionQuestions()">
+        <ion-icon item-left name="list-box"></ion-icon>
+        <span ion-text>Questionnaire</span>
       </button>
-      <button ion-item icon-start menuClose (click)="openPage(implantationPlanPage)">
-        <ion-icon name="map"></ion-icon>
-        Plan d'implantation
+
+      <button ion-item menuClose class="text-menu" (click)="goBackToInspectionList()">
+        <ion-icon item-left name="close-circle"></ion-icon>
+        <span ion-text>Sortir de l'inspection</span>
       </button>
-      <button ion-item menuClose (click)="openPage(coursePage)">
-        Parcours
-      </button>
-      <button ion-item icon-start menuClose (click)="openPage(waterSuppliesPage)">
-        Alimentation en eau
-      </button>
-      <button ion-item icon-start menuClose (click)="goToInspectionQuestions()">
-        <ion-icon name="list-box"></ion-icon>
-        Questionnaire
-      </button>
-      <button ion-item (click)="goBackToInspectionList()">
-        <ion-icon name="close-circle"></ion-icon>
-        Sortir de l'inspection
-      </button>
+
     </ion-list>
   </ion-content>
 </ion-menu>
