--- a/src/pages/intervention-home/intervention-home.html
+++ b/src/pages/intervention-home/intervention-home.html
@@ -1,39 +1,6 @@
 <ion-menu [content]="mycontent" [persistent]="true" id="inspectionMenu">
   <ion-header>
-    <ion-toolbar class="user-profile">
-      <ion-grid>
-        <ion-row>
-
-          <ion-col col-3>
-            <div class="user-avatar">
-              <img src="../assets/img/logocauca-vertical.png">
-            </div>
-          </ion-col>
-
-          <ion-col col-6>
-            <span ion-text class="text-white"><strong>SURVI</strong> prévention</span>
-            <h3 ion-text class="no-margin bold text-white">{{fullName}}</h3>
-          </ion-col>
-
-        </ion-row>
-
-        <ion-row no-padding class="other-data">
-          <ion-col no-padding class="column">
-            <button ion-button icon-left small full color="light" menuClose disabled>
-              <ion-icon name="contact"></ion-icon>
-              Configuration
-            </button>
-          </ion-col>
-          <ion-col no-padding class="column">
-            <button ion-button icon-left small full color="light" menuClose (click)="logout()">
-              <ion-icon name="log-out"></ion-icon>
-              Fermer la session
-            </button>
-          </ion-col>
-        </ion-row>
-
-      </ion-grid>
-    </ion-toolbar>
+    <menu-profile></menu-profile>
   </ion-header>
 
   <ion-content color="caucaRed">
