--- a/src/pages/building-main/building-main.html
+++ b/src/pages/building-main/building-main.html
@@ -12,17 +12,25 @@
         <span ion-text>{{menuItem.title}}</span>
       </button>
 
-      <button ion-item icon-start class="text-menu" (click)="goBackToInspection()">
-        <ion-icon name="undo" small></ion-icon>
-        <span ion-text>Retourner à l'inspection</span>
-      </button>
-      <button ion-item icon-start class="text-menu" (click)="goBackToInspectionList()">
-        <ion-icon name="close-circle" small></ion-icon>
-        <span ion-text>Sortir de l'inspection</span>
-      </button>
-
     </ion-list>
   </ion-content>
+
+  <ion-footer>
+    <ion-toolbar class="user-profile">
+      <ion-grid>
+        <ion-row no-padding class="other-data">
+          <ion-col no-padding class="column">
+            <button ion-button icon-left small full color="light" menuClose (click)="goBackToInspection()">
+              <ion-icon name="undo"></ion-icon>
+              Retourner à l'inspection
+            </button>
+          </ion-col>
+        </ion-row>
+
+      </ion-grid>
+    </ion-toolbar>
+
+  </ion-footer>
 </ion-menu>
 
 <ion-nav #buildingContent [root]="rootPage" [rootParams]="getParams()"></ion-nav>
