Feat(#39) Title bars theming.

--- a/src/pages/building-anomaly-detail/building-anomaly-detail.html
+++ b/src/pages/building-anomaly-detail/building-anomaly-detail.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="page-header">
 
   <ion-navbar>
     <ion-buttons left>
@@ -10,7 +10,6 @@
   </ion-navbar>
 
 </ion-header>
-
 
 
 <ion-content [formGroup]="form">
