--- a/src/pages/inspection-question/inspection-question.html
+++ b/src/pages/inspection-question/inspection-question.html
@@ -1,10 +1,10 @@
-<ion-header>
-
+<ion-header class="page-header">
   <ion-navbar>
     <ion-title>Questionnaire</ion-title>
   </ion-navbar>
 
 </ion-header>
+
 <ion-content padding>
   <ion-slides>
     <ion-slide *ngFor="let choice of inspectionQuestionAnswer">
@@ -23,6 +23,7 @@
     </ion-slide>
   </ion-slides>
 </ion-content>
+
 <ion-footer>
   <ion-toolbar>
     <ion-buttons>
