--- a/src/pages/anomaly-theme-selection/anomaly-theme-selection.html
+++ b/src/pages/anomaly-theme-selection/anomaly-theme-selection.html
@@ -1,5 +1,5 @@
 
-<ion-header>
+<ion-header class="page-header">
   <ion-navbar>
     <ion-buttons left>
       <button ion-button icon-only (click)="onCancel()">
