--- a/src/pages/building-alarm-panels/building-alarm-panels.html
+++ b/src/pages/building-alarm-panels/building-alarm-panels.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="page-header">
   <ion-navbar>
     <ion-buttons left>
       <button ion-button  icon-only (click)="onCancelEdition()">
