--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -1,11 +1,4 @@
-<!--
-  Generated template for the BuildingDetailsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
+<ion-header class="page-header">  <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
     <ion-title>
       {{name}}
