--- a/src/pages/building-fire-protection/building-fire-protection.html
+++ b/src/pages/building-fire-protection/building-fire-protection.html
@@ -1,10 +1,5 @@
-<!--
-  Generated template for the BuildingFireProtectionPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+<ion-header class="page-header">
 
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
