--- a/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
+++ b/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="page-header">
   <ion-navbar>
     <ion-buttons left>
       <button ion-button  icon-only (click)="onCancelEdition()">
