--- a/src/pages/city-fire-hydrant/city-fire-hydrant.html
+++ b/src/pages/city-fire-hydrant/city-fire-hydrant.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="page-header">
   <ion-navbar>
     <ion-title>Liste des bornes fontaine</ion-title>
   </ion-navbar>
