--- a/src/pages/fire-hydrant/fire-hydrant.html
+++ b/src/pages/fire-hydrant/fire-hydrant.html
@@ -1,11 +1,4 @@
-<!--
-  Generated template for the FireHydrantPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
+<ion-header class="page-header">
   <ion-navbar>
     <ion-title>fire-hydrant</ion-title>
   </ion-navbar>
