--- a/src/pages/hazardous-material-selection/hazardous-material-selection.html
+++ b/src/pages/hazardous-material-selection/hazardous-material-selection.html
@@ -1,7 +1,4 @@
-
-<ion-header>
-
-  <ion-navbar>
+<ion-header class="page-header">  <ion-navbar>
     <ion-buttons left>
       <button ion-button  icon-only (click)="onCancel()">
         <ion-icon name="arrow-back"></ion-icon>
