--- a/src/pages/inspection-list/inspection-list.html
+++ b/src/pages/inspection-list/inspection-list.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header class="page-header">
 
   <ion-navbar>
     <ion-title>Liste des inspections</ion-title>
@@ -22,7 +22,7 @@
   <ion-refresher (ionRefresh)="refreshList($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  <ion-list>
+  <ion-list class="list-items">
       <ion-item-group *ngFor="let batch of filteredBatches">
         <ion-item-divider>Lot d'inspection : {{batch.description}}</ion-item-divider>
         <button ion-item *ngFor="let inspection of batch.inspections" (click)="itemSelected(inspection)">
