--- a/src/pages/intervention-course/intervention-course.html
+++ b/src/pages/intervention-course/intervention-course.html
@@ -1,10 +1,4 @@
-<!--
-  Generated template for the InterventionCoursePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+<ion-header class="page-header">
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
     <ion-title>
