--- a/src/pages/building-anomalies/building-anomalies.html
+++ b/src/pages/building-anomalies/building-anomalies.html
@@ -9,12 +9,12 @@
 
 
 <ion-content>
-  <ion-list>
+  <ion-list class="list-items">
     <ion-item-group *ngFor="let theme of themes | orderBy:'theme'">
 
       <ion-list-header color="light">
         {{theme.theme}}
-        <button ion-button item-end (click)="onAddAnomalyForTheme(theme.theme)">Ajouter</button>
+        <button ion-button item-end (click)="onAddAnomalyForTheme(theme.theme)" color="caucaRed">Ajouter</button>
       </ion-list-header>
 
       <button ion-item *ngFor="let anomaly of theme.anomalies | orderBy:'notes'" (click)="onItemClick(anomaly.id)">
@@ -26,7 +26,7 @@
 </ion-content>
 
 
-<ion-footer>
+<ion-footer class="page-footer">
   <ion-toolbar>
     <ion-buttons>
       <button ion-button icon-start full type="button" (click)="onAddNewAnomaly()">
