--- a/src/pages/building-contacts/building-contacts.html
+++ b/src/pages/building-contacts/building-contacts.html
@@ -10,7 +10,7 @@
 
 
 <ion-content>
-  <ion-list>
+  <ion-list class="list-items">
     <ion-list-header>
       Contacts du bâtiment
     </ion-list-header>
@@ -21,7 +21,7 @@
   </ion-list>
 </ion-content>
 
-<ion-footer>
+<ion-footer class="page-footer">
   <ion-toolbar>
     <ion-buttons>
       <button ion-button icon-start full type="button" (click)="onItemClick(null)">
