--- a/src/pages/building-details/building-details.html
+++ b/src/pages/building-details/building-details.html
@@ -8,7 +8,7 @@
 
 
 <ion-content>
-  <ion-list [formGroup]="form">
+  <ion-list [formGroup]="form" class="list-items">
     <ion-list-header>Détails du bâtiment</ion-list-header>
 
     <ion-item-group>
