--- a/src/pages/building-water-sprinklers/building-water-sprinklers.html
+++ b/src/pages/building-water-sprinklers/building-water-sprinklers.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-list [formGroup]="form">
+  <ion-list [formGroup]="form" class="list-items">
 
     <ion-item  [class.invalid]="!form.controls.idSprinklerType.valid">
       <ion-label>Type</ion-label>
@@ -57,7 +57,7 @@
   </ion-list>
 </ion-content>
 
-<ion-footer>
+<ion-footer class="page-footer">
   <ion-navbar *ngIf="!isNew">
     <ion-buttons left>
       <button ion-button  icon-start (click)="onDeleteSprinkler()">
