--- a/src/pages/inspection-question/inspection-question.html
+++ b/src/pages/inspection-question/inspection-question.html
@@ -2,7 +2,6 @@
   <ion-navbar>
     <ion-title>Questionnaire</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 <ion-content padding>
@@ -24,7 +23,7 @@
   </ion-slides>
 </ion-content>
 
-<ion-footer>
+<ion-footer class="page-footer">
   <ion-toolbar>
     <ion-buttons>
     <button ion-button icon-start type="button" style="float: left;" (click)="previousQuestion()" *ngIf="previousQuestionAvailable">
