--- a/src/pages/building-anomaly-detail/building-anomaly-detail.html
+++ b/src/pages/building-anomaly-detail/building-anomaly-detail.html
@@ -13,7 +13,7 @@
 
 
 <ion-content [formGroup]="form">
-  <ion-list>
+  <ion-list class="list-items">
 
     <button ion-item (click)="onSelectAnomaly()">
       <ion-label item-start fixed>Thème</ion-label>
@@ -36,7 +36,7 @@
 </ion-content>
 
 
-<ion-footer>
+<ion-footer class="page-footer">
 
   <ion-navbar *ngIf="!isNew">
     <ion-buttons left>
