--- a/src/pages/building-contact-detail/building-contact-detail.html
+++ b/src/pages/building-contact-detail/building-contact-detail.html
@@ -13,7 +13,7 @@
 
 
 <ion-content>
-  <ion-list [formGroup]="form">
+  <ion-list [formGroup]="form" class="list-items">
     <ion-item-group>
       <ion-item-divider>Informations générales</ion-item-divider>
       <ion-item [class.invalid]="!form.controls.firstName.valid">
@@ -84,7 +84,7 @@
   </ion-list>
 </ion-content>
 
-<ion-footer>
+<ion-footer class="page-footer">
 
   <ion-navbar *ngIf="!isNew">
     <ion-buttons left>
