--- a/src/pages/city-fire-hydrant/city-fire-hydrant.html
+++ b/src/pages/city-fire-hydrant/city-fire-hydrant.html
@@ -2,10 +2,10 @@
   <ion-navbar>
     <ion-title>Liste des bornes fontaine</ion-title>
   </ion-navbar>
+  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
 </ion-header>
 <ion-content>
-  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
-  <ion-list>
+  <ion-list class="list-items">
     <ion-list-header>
       Bornes
     </ion-list-header>
