--- a/src/pages/hazardous-material-selection/hazardous-material-selection.html
+++ b/src/pages/hazardous-material-selection/hazardous-material-selection.html
@@ -1,4 +1,5 @@
-<ion-header class="page-header">  <ion-navbar>
+<ion-header class="page-header">
+  <ion-navbar>
     <ion-buttons left>
       <button ion-button  icon-only (click)="onCancel()">
         <ion-icon name="arrow-back"></ion-icon>
@@ -11,7 +12,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
+  <ion-list class="list-items">
     <button ion-item *ngFor="let mat of hazardousMaterials | orderBy: 'name'" (click)="onSelectMaterial(mat.id)">
       <h2>{{mat.name}}</h2>
       <p>{{mat.number}}</p>
