--- a/src/pages/intervention-course/intervention-course.html
+++ b/src/pages/intervention-course/intervention-course.html
@@ -2,21 +2,21 @@
   <ion-navbar>
     <ion-icon name="menu" menuToggle left></ion-icon>
     <ion-title>
-      {{plan?.mainBuildingAddress}}
+      Parcours
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
+  <ion-list class="list-items">
     <ion-list-header>
-      Parcours
+      {{plan?.mainBuildingAddress}}
     </ion-list-header>
-    <button ion-item *ngFor="let item of courses | orderBy:'description'" (click)="onItemClick(item.id)">{{item.description}}</button>
+    <button ion-item *ngFor="let item of courses | orderBy:'description'" (click)="onItemClick(item.id)" detail-push>{{item.description}}</button>
   </ion-list>
 </ion-content>
 
-<ion-footer>
+<ion-footer class="page-footer">
   <ion-toolbar>
     <ion-buttons>
       <button ion-button icon-start type="button" (click)="onItemClick(null)">
