--- a/src/pages/intervention-water-supplies/intervention-water-supplies.html
+++ b/src/pages/intervention-water-supplies/intervention-water-supplies.html
@@ -2,7 +2,7 @@
     <ion-navbar>
         <ion-icon name="menu" menuToggle left></ion-icon>
         <ion-title>
-            {{plan?.mainBuildingAddress}}
+          Liste des bornes
         </ion-title>
     </ion-navbar>
 </ion-header>
@@ -10,9 +10,9 @@
 
 <ion-content>
 
-    <ion-list>
+    <ion-list class="list-items">
         <ion-list-header>
-            Liste des bornes
+          {{plan?.mainBuildingAddress}}
         </ion-list-header>
         <ion-item *ngFor="let hydrant of fireHydrants | orderBy:'number'">
             <div>
@@ -28,13 +28,13 @@
     </ion-list>
 </ion-content>
 
-<ion-footer>
+<ion-footer class="page-footer">
     <ion-toolbar>
-        <ion-buttons>
-            <button ion-button type="button" (click)="onItemClick(plan?.idCity)">
-                <ion-icon name="add-circle"></ion-icon>
-                Ajouter...
-            </button>
-        </ion-buttons>
+      <ion-buttons>
+      <button ion-button icon-left (click)="onItemClick(plan?.idCity)">
+        <ion-icon name="add-circle"></ion-icon>
+        Ajouter...
+      </button>
+      </ion-buttons>
     </ion-toolbar>
 </ion-footer>
