Fix(#39) Quit inspection menu item was not working anymore.

--- a/src/pages/intervention-home/intervention-home.html
+++ b/src/pages/intervention-home/intervention-home.html
@@ -23,7 +23,7 @@
       <ion-grid>
         <ion-row no-padding class="other-data">
           <ion-col no-padding class="column">
-            <button ion-button icon-left small full color="light" menuClose (click)="goBackToInspection()">
+            <button ion-button icon-left small full color="light" menuClose (click)="goBackToInspectionList()">
               <ion-icon name="close-circle"></ion-icon>
               Sortir de l'inspection
             </button>
