--- a/src/pages/building-alarm-panels/building-alarm-panels.html
+++ b/src/pages/building-alarm-panels/building-alarm-panels.html
@@ -22,7 +22,7 @@
     <div *ngIf="!form.controls.idAlarmPanelType.valid" class="validation-error-text">*Le type est requis.</div>
 
     <ion-item-group>
-      <ion-list-header color="light">Localisation</ion-list-header>
+      <ion-item-divider>Localisation</ion-item-divider>
       <ion-item>
         <ion-label>Étage</ion-label>
         <ion-input type="text" maxlength="3" placeholder="Étage" formControlName="floor"></ion-input>
