--- a/src/pages/building-water-sprinklers/building-water-sprinklers.html
+++ b/src/pages/building-water-sprinklers/building-water-sprinklers.html
@@ -21,7 +21,7 @@
     <div *ngIf="!form.controls.idSprinklerType.valid" class="validation-error-text">*Le type est requis.</div>
 
     <ion-item-group>
-      <ion-list-header color="light">Localisation</ion-list-header>
+      <ion-item-divider>Localisation</ion-item-divider>
       <ion-item>
         <ion-label>Étage</ion-label>
         <ion-input type="text" maxlength="3" placeholder="Étage" formControlName="floor"></ion-input>
