feat(#54) : Change survey and survey summary navigation
Use menu instead of the back navigation

--- a/src/pages/inspection-question/inspection-question.html
+++ b/src/pages/inspection-question/inspection-question.html
@@ -1,5 +1,6 @@
 <ion-header class="page-header">
   <ion-navbar>
+    <ion-icon name="menu" menuToggle left></ion-icon>
     <ion-title>Questionnaire</ion-title>
   </ion-navbar>
 </ion-header>
@@ -36,4 +37,4 @@
     </button>
     </ion-buttons>
   </ion-toolbar>
-</ion-footer>>
+</ion-footer>
