Feat(#60) Display hazardousMaterial number everywhere where we're displaying the hazardous material's name.

--- a/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
+++ b/src/pages/building-hazardous-material-detail/building-hazardous-material-detail.html
@@ -15,7 +15,7 @@
     <ion-item-group>
       <ion-item-divider>Produit</ion-item-divider>
       <button ion-item icon-end (click)="onChangeMaterial()" [class.invalid]="!form.controls.idHazardousMaterial.valid">
-        {{materialName}}
+        {{getSelectedMaterialDescription()}}
       </button>
       <div *ngIf="!form.controls.idHazardousMaterial.valid" class="validation-error-text">*La matière est requise.</div>
     </ion-item-group>
