--- a/src/pages/intervention-general/intervention-general.html
+++ b/src/pages/intervention-general/intervention-general.html
@@ -1,67 +1,69 @@
 <ion-header class="page-header">
-  <ion-navbar>
-    <ion-icon name="menu" menuToggle left></ion-icon>
-    <ion-title>
-      Informations générales
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-icon name="menu" menuToggle left></ion-icon>
+        <ion-title>
+            Informations générales
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 
 
 <ion-content>
+    <form novalidate (ngSubmit)="onSubmit(planForm)" [formGroup]="planForm" style="padding:0px; margin-top:-3px">
 
-  <form novalidate (ngSubmit)="onSubmit(planForm)" [formGroup]="planForm" style="padding:0px; margin-top:-3px">
+        <ion-list class="list-items">
 
-    <ion-list class="list-items">
+            <ion-list-header>
+                {{plan?.mainBuildingAddress}}
+            </ion-list-header>
 
-      <ion-list-header>
-        {{plan?.mainBuildingAddress}}
-      </ion-list-header>
+            <ion-item>
+                <ion-label fixed>Risque</ion-label>
+                <ion-input type="text" disabled value="{{riskLevel?.name}}"></ion-input>
+            </ion-item>
 
-      <ion-item>
-        <ion-label fixed>Risque</ion-label>
-        <ion-input type="text" disabled value="{{riskLevel?.name}}"></ion-input>
-      </ion-item>
+            <ion-item>
+                <ion-label fixed>Affectation</ion-label>
+                <ion-input type="text" disabled value="{{utilisationCodeName}}"></ion-input>
+            </ion-item>
 
-      <ion-item>
-        <ion-label fixed>Affectation</ion-label>
-        <ion-input type="text" disabled value="{{utilisationCodeName}}"></ion-input>
-      </ion-item>
+            <ion-item>
+                <ion-label fixed>Matricule</ion-label>
+                <ion-input type="text" disabled value="{{plan?.mainBuildingMatricule}}"></ion-input>
+            </ion-item>
 
-      <ion-item>
-        <ion-label fixed>Matricule</ion-label>
-        <ion-input type="text" disabled value="{{plan?.mainBuildingMatricule}}"></ion-input>
-      </ion-item>
+            <ion-item>
+                <ion-label fixed>Alias</ion-label>
+                <ion-input type="text" disabled value="{{plan?.mainBuildingName}}"></ion-input>
+            </ion-item>
 
-      <ion-item>
-        <ion-label fixed>Alias</ion-label>
-        <ion-input type="text" disabled value="{{plan?.mainBuildingName}}"></ion-input>
-      </ion-item>
+            <ion-item>
+                <ion-label fixed>Voie de circu.</ion-label>
+                <ion-input type="text" disabled value="{{laneName}}"></ion-input>
+            </ion-item>
 
-      <ion-item>
-        <ion-label fixed>Voie de circu.</ion-label>
-        <ion-input type="text" disabled value="{{laneName}}"></ion-input>
-      </ion-item>
+            <search-box
+                    [description]="'Transversale'"
+                    formControlName="idLaneTransversal"
+                    [displayFieldName]="'name'"
+                    [keyFieldName]="'id'"
+                    [dataService]="laneService"></search-box>
+        </ion-list>
+    </form>
+    <ion-card>
+        <ion-card-header>{{statusText}}</ion-card-header>
+        <div class="refuse_reason" *ngIf="plan?.approbationRefusalReason">
+            <ion-label >Raison : </ion-label>
+            <ion-label>{{plan.approbationRefusalReason}}</ion-label>
+        </div>
+        <button *ngIf="plan?.status == inspectionDetailProvider.InspectionVisitStatusEnum.Todo" ion-button block color="caucaRed" class="large-button" (click)="startInspection()">Démarrer</button>
 
-      <search-box
-          [description]="'Transversale'"
-          formControlName="idLaneTransversal"
-          [displayFieldName]="'name'"
-          [keyFieldName]="'id'"
-          [dataService]="laneService"></search-box>
-    </ion-list>
-
-    <ion-card >
-      <ion-card-header>{{statusText}}</ion-card-header>
-      <ion-label *ngIf="plan?.approbationRefusalReason">Raison :{{plan.approbationRefusalReason}}</ion-label>
-        <button ion-button block color="caucaRed" class="large-button" (click)="startInspection()">Démarrer</button>
         <div class="inline-button">
-          <button ion-button color="caucaRed" (click)="refuseVisit()">Refus de visite</button>
-          <button ion-button color="caucaRed" (click)="absentVisit()">Absence</button>
+            <button ion-button color="caucaRed" (click)="refuseVisit()">Refus de visite</button>
+            <button ion-button color="caucaRed" (click)="absentVisit()">Absence</button>
         </div>
 
-        <button *ngIf="isStarted" ion-button block color="caucaRed" class="large-button">Compléter</button>
+        <button *ngIf="plan?.status == inspectionDetailProvider.InspectionVisitStatusEnum.Started" ion-button block color="caucaRed" class="large-button" (click)="completeInspection()">Compléter</button>
 
     </ion-card>
-  </form>
 </ion-content>
