rebase on master

--- a/src/pages/inspection-question-summary/inspection-question-summary.html
+++ b/src/pages/inspection-question-summary/inspection-question-summary.html
@@ -1,6 +1,6 @@
-<ion-header class="page-header">
+<ion-header>
+
     <ion-navbar>
-        <ion-icon name="menu" menuToggle left></ion-icon>
         <ion-title>Synthèse du questionnaire</ion-title>
     </ion-navbar>
 
