--- a/src/pages/inspection-question/inspection-question.html
+++ b/src/pages/inspection-question/inspection-question.html
@@ -1,6 +1,5 @@
 <ion-header class="page-header">
   <ion-navbar>
-    <ion-icon name="menu" menuToggle left></ion-icon>
     <ion-title>Questionnaire</ion-title>
   </ion-navbar>
 </ion-header>
@@ -37,4 +36,4 @@
     </button>
     </ion-buttons>
   </ion-toolbar>
-</ion-footer>
+</ion-footer>>
