feat(#41) : Add mandatory validation on refusal reason

--- a/src/pages/inspection-visit/inspection-visit.html
+++ b/src/pages/inspection-visit/inspection-visit.html
@@ -28,7 +28,7 @@
                 </ion-item>
                 <ion-item class="align-row">
                     <ion-label>Raison du refus :</ion-label><br>
-                    <ion-textarea [(ngModel)]=RefusalReason></ion-textarea>
+                    <ion-textarea [(ngModel)]=refusalReason></ion-textarea>
                 </ion-item>
                 <ion-item>
                     <ion-label>Accroche-porte laissé :</ion-label>
